--- a/public/pr.html
+++ b/public/pr.html
@@ -22,6 +22,7 @@
     <!-- PR Display Styles -->
     <link rel="stylesheet" href="/css/pr.css">
     <link rel="stylesheet" href="/css/ai-summary-modal.css">
+    <link rel="stylesheet" href="/css/chat-panel.css">
     <link rel="stylesheet" href="/css/styles.css">
 
     <!-- Highlight.js for syntax highlighting -->
@@ -333,6 +334,7 @@
     <script src="/js/modules/diff-renderer.js"></script>
     <script src="/js/modules/comment-manager.js"></script>
     <script src="/js/modules/suggestion-manager.js"></script>
+    <script src="/js/modules/chat-panel-manager.js"></script>
     <script src="/js/modules/file-comment-manager.js"></script>
     <script src="/js/modules/panel-resizer.js"></script>
     <script src="/js/modules/analysis-history.js"></script>
